# mystrava

./: .gitignore  SETUP_TOKENS.md  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
api/: index.py
docs/: export-to-sailties.md
frontend/: .env.example  auth.config.ts  auth.ts  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/activities/: page.tsx
frontend/app/dashboard/sailing/: page.tsx
frontend/app/dashboard/sailing/[id]/: page.tsx
frontend/components/: ActivitiesTable.tsx  ActivityTrackCharts.tsx  PoweredByStrava.tsx  SailingLogbook.tsx  TacksTable.tsx
frontend/components/__tests__/: SailingLogbook.test.tsx
frontend/lib/: activity-values.ts  api.ts  format.ts  providers.tsx  theme.ts
frontend/lib/__tests__/: activity-values.test.ts
frontend/mock_data/: mock_sailing_data.json
strava/: __init__.py  api.py  auth.py  cli.py  client.py  export.py  gpx.py  navigation.py  test_api.py  test_auth.py  test_cli.py  test_export.py
